# pretix-email-allow-images

./: .update-locales.sh  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_email_allow_images/: apps.py  signals.py
tests/: test_main.py
