[project]
name = "pretix-email-allow-images"
dynamic = ["version"]
description = "Allow images in organizer-generated email templates"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_email_allow_images = "pretix_email_allow_images:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix-unofficial/pretix-email-allow-images"
repository = "https://github.com/pretix-unofficial/pretix-email-allow-images"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_email_allow_images.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
